--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,6 @@ services:
     ports:
       - '3000:3000'
     volumes:
-      - ./:/var/www/react
-    working_dir: /var/www/react
+      - ./:/var/www
+    working_dir: /var/www
     command: 'npm start'
